# B2BHolidays

./: Cargo.toml  README.md
benches/: cache_benchmark.rs
samples/: hotel_search_request.xml  hotel_search_response.xml  supplier_response.json
src/: lib.rs  part1_cache.rs  part2_xml.rs  part3_api.rs  part3_api_example.rs  supplier.rs  xml_response.rs
