[package]
name = "travel_tech_assessment"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.4"
rand = "0.8"
test-case = "3.3.1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
rand = "0.8"

[[bench]]
name = "cache_benchmark"
harness = false
